lab1/Test/L1-A-5-36.output
Error Type B at Line 2
Error Type A at Line 10
Error Type A at Line 11
Error Type B at Line 12
Error Type B at Line 16
Error Type B at Line 18
Error Type A at Line 20
Error Type A at Line 23
