lab1/Test/L1-A-5-36.cmm
float prGoF [ 418331639 ] [ 941314634 ] , ru [ 1083333934 
  ] , Dp9srYRgF [ 14277956 ] 1304064720 ] , zbgfO0egPK 
  [ 919675005 ] [ 656347219 ] , TtZq0UDqNNc 




;
int lZoYY5RiHDOZL 
;`
&float gFsj3_kF0fJyA4EN0 ( struct {
  float Mvyip7fuw47azvMbU [ 1176822990 ] 1892376396 
    ] , lONBrw16k ;
  struct s0 z2zq0UnD5DKzuI4 ;
}LriG1aHrAp13GpSX9 , int AsVArTOCbeAUF [ 1327685844 
  ] {
  if ( - - z2uIt * GcL2x9wMa8olvCaV / U_ * Sr_4D >= 
    m9xE3SxBEobOPmxo1C < IXWDhCyW2mFE < == sS2p4v3IZ3 
    != T5PA_VM && tFnFOQEaeyHKLoGzm )   KJtU4i ;
else   klDbzA4GInS6YaLa ;#

}
&